Fixed spacing in email section media query.

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -1288,7 +1288,7 @@
     }
     #emailsection {
         p {
-            margin: 50px 10px 40px 10px;
+            margin: 50px 0px 40px 0px;
             padding: 5px;
             font-size: 25px;
             color: #fae6fa;
